Fix: Client - fix mobile nav width cause overflow on x axis

--- a/client/src/styles/mobileNav.module.css
+++ b/client/src/styles/mobileNav.module.css
@@ -7,7 +7,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   font-size: 2rem;
   font-weight: 500;
